--- a/product-service/application-local.properties
+++ b/product-service/application-local.properties
@@ -3,12 +3,10 @@ server.port=8085
 
 spring.datasource.password=password
 spring.datasource.username=product_service
-spring.datasource.url=jdbc:mysql://localhost:3307/productservice?useUnicode=true&useJDBCComplaintTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://mysql_db:3306/productservice?useUnicode=true&useJDBCComplaintTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 
 spring.artemis.user=artemis
 spring.artemis.password=simetraehcapa
-
-spring.cache.jcache.config=classpath:ehcache.xml
 
 spring.data.rest.default-media-type=application/json
 com.antoonvereecken.product-inventory-service-host=http://localhost:8086
@@ -20,5 +18,5 @@ logging.level.web=DEBUG
 spring.jpa.open-in-view=true
 
 # Profile: local-discovery
-feign.hystrix.enabled=true
-spring.cloud.loadbalancer.ribbon.enabled=false
+# feign.hystrix.enabled=true
+# spring.cloud.loadbalancer.ribbon.enabled=false
