--- a/product-service/application-docker.properties
+++ b/product-service/application-docker.properties
@@ -3,7 +3,7 @@ server.port=8085
 
 spring.datasource.password=password
 spring.datasource.username=product_service
-spring.datasource.url=jdbc:mysql://localhost:3306/productservice?useUnicode=true&useJDBCComplaintTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://mysql:3306/productservice?useUnicode=true&useJDBCComplaintTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 
 spring.artemis.user=artemis
 spring.artemis.password=simetraehcapa
