--- a/product-service/application-docker.properties
+++ b/product-service/application-docker.properties
@@ -9,7 +9,7 @@ spring.artemis.user=artemis
 spring.artemis.password=simetraehcapa
 
 spring.data.rest.default-media-type=application/json
-com.antoonvereecken.product-inventory-service-host=http://inventory-service:8086
+com.antoonvereecken.product-inventory-service-host=http://user:pw@inventory-service:8086
 
 logging.level.com.antoonvereecken=debug
 logging.level.org.hibernate.SQL=DEBUG
