--- a/application.properties
+++ b/application.properties
@@ -1,2 +1,19 @@
 spring.security.user.name=user
 spring.security.user.password=pw
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.data.jpa.repositories.bootstrap-mode=default
+
+spring.datasource.hikari.maximum-pool-size=5
+spring.dataSource.hikari.data-source-properties.cachePrepStmts=true
+spring.dataSource.hikari.data-source-properties.dataSource.prepStmtCacheSize=250
+spring.dataSource.hikari.data-source-properties.dataSource.prepStmtCacheSqlLimit=2048
+spring.dataSource.hikari.data-source-properties.dataSource.useServerPrepStmts=true
+spring.dataSource.hikari.data-source-properties.dataSource.useLocalSessionState=true
+spring.dataSource.hikari.data-source-properties.dataSource.rewriteBatchedStatements=true
+spring.dataSource.hikari.data-source-properties.dataSource.cacheResultSetMetadata=true
+spring.dataSource.hikari.data-source-properties.dataSource.cacheServerConfiguration=true
+spring.dataSource.hikari.data-source-properties.dataSource.elideSetAutoCommits=true
+spring.dataSource.hikari.data-source-properties.dataSource.maintainTimeStats=false
