--- a/order-service/application-docker.properties
+++ b/order-service/application-docker.properties
@@ -1,6 +1,8 @@
 spring.application.name=order-service
 server.port=8087
 
+com.antoonvereecken.product-service-host=http://product-service:8085/
+
 spring.datasource.password=password
 spring.datasource.username=product_order_service
 spring.datasource.url=jdbc:mysql://mysql:3306/productorderservice?useUnicode=true&useJDBCComplaintTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
