--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,4 @@
-spring.security.user.name=user
-spring.security.user.password=pw
+spring.data.rest.default-media-type=application/json
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=create-drop
@@ -17,3 +16,7 @@ spring.dataSource.hikari.data-source-properties.dataSource.cacheResultSetMetadat
 spring.dataSource.hikari.data-source-properties.dataSource.cacheServerConfiguration=true
 spring.dataSource.hikari.data-source-properties.dataSource.elideSetAutoCommits=true
 spring.dataSource.hikari.data-source-properties.dataSource.maintainTimeStats=false
+
+spring.jpa.open-in-view=true
+#logging.level.web=DEBUG
+logging.level.com.antoonvereecken=DEBUG
