--- a/inventory-service/application-docker.properties
+++ b/inventory-service/application-docker.properties
@@ -1,17 +1,16 @@
 spring.application.name=inventory-service
 server.port=8086
 
-spring.datasource.password=password
-spring.datasource.username=product_inventory_service
-spring.datasource.url=jdbc:mysql://mysql:3306/productinventoryservice?useUnicode=true&useJDBCComplaintTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.security.user.name=user
+spring.security.user.password=pw
 
 spring.artemis.user=artemis
 spring.artemis.password=simetraehcapa
 
-spring.cache.jcache.config=classpath:ehcache.xml
+spring.datasource.password=password
+spring.datasource.username=product_inventory_service
+spring.datasource.url=jdbc:mysql://mysql:3306/productinventoryservice?useUnicode=true&useJDBCComplaintTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 
-spring.data.rest.default-media-type=application/json
 
-spring.jpa.open-in-view=true
-#logging.level.web=DEBUG
-logging.level.com.antoonvereecken=DEBUG
+
+
