--- a/order-service/application-docker.properties
+++ b/order-service/application-docker.properties
@@ -3,17 +3,12 @@ server.port=8087
 
 com.antoonvereecken.product-service-host=http://product-service:8085/
 
-spring.datasource.password=password
-spring.datasource.username=product_order_service
-spring.datasource.url=jdbc:mysql://mysql:3306/productorderservice?useUnicode=true&useJDBCComplaintTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.security.user.name=user
+spring.security.user.password=pw
 
 spring.artemis.user=artemis
 spring.artemis.password=simetraehcapa
 
-spring.cache.jcache.config=classpath:ehcache.xml
-
-spring.data.rest.default-media-type=application/json
-
-spring.jpa.open-in-view=true
-#logging.level.web=DEBUG
-logging.level.com.antoonvereecken=DEBUG
+spring.datasource.password=password
+spring.datasource.username=product_order_service
+spring.datasource.url=jdbc:mysql://mysql:3306/productorderservice?useUnicode=true&useJDBCComplaintTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
