--- a/product-service/application-docker.properties
+++ b/product-service/application-docker.properties
@@ -1,22 +1,14 @@
 spring.application.name=product-service
 server.port=8085
 
-spring.datasource.password=password
-spring.datasource.username=product_service
-spring.datasource.url=jdbc:mysql://mysql:3306/productservice?useUnicode=true&useJDBCComplaintTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+com.antoonvereecken.product-inventory-service-host=http://user:pw@inventory-service:8086
+
+spring.security.user.name=user
+spring.security.user.password=pw
 
 spring.artemis.user=artemis
 spring.artemis.password=simetraehcapa
 
-spring.data.rest.default-media-type=application/json
-com.antoonvereecken.product-inventory-service-host=http://user:pw@inventory-service:8086
-
-logging.level.com.antoonvereecken=debug
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.web=DEBUG
-
-spring.jpa.open-in-view=true
-
-# Profile: local-discovery
-# feign.hystrix.enabled=true
-# spring.cloud.loadbalancer.ribbon.enabled=false
+spring.datasource.password=password
+spring.datasource.username=product_service
+spring.datasource.url=jdbc:mysql://mysql:3306/productservice?useUnicode=true&useJDBCComplaintTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
